<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_nav"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/favorite_nav"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/setting_nav"
        android:title="@string/setting"
        android:icon="@drawable/ic_setting"
        app:showAsAction="ifRoom"/>

    <item
        android:title=""
        android:checkable="false"
        android:checked="false"
        app:showAsAction="always"
        android:enabled="false"/>

    <item
        android:title=""
        android:checkable="false"
        android:checked="false"
        app:showAsAction="always"
        android:enabled="false"/>
</menu>