<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/root_padding"
    tools:context=".ui.fragments.slide.SlideFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_title_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/title_board_one"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/board_title_margin_top"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_image_board"
        android:layout_width="234dp"
        android:layout_height="234dp"
        tools:src="@drawable/board_one"
        android:contentDescription="@string/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@id/tv_description_board"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_board" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/description_board_one"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_image_board" />

</androidx.constraintlayout.widget.ConstraintLayout>