<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.fragments.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/root_padding">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="?colorAccent"
            app:layout_constraintBottom_toTopOf="@id/tv_title_greet"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_greet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/great_text_margin_top"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@id/tv_description_greet"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:text="@string/title_greet_login" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description_greet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_greet_login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintBottom_toTopOf="@id/layout_edt_email"
            app:layout_constraintTop_toBottomOf="@id/tv_title_greet"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_edt_margin_top"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:endIconTint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/layout_edt_password"
            app:layout_constraintTop_toBottomOf="@id/tv_description_greet">

            <com.rchyn.prosa.components.EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_edt_distance_margin"
            android:hint="@string/password"
            app:hintAnimationEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/layout_edt_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="?colorAccent">

            <com.rchyn.prosa.components.EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edt_height"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="0dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.Prosa.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_edt_distance_margin"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/layout_edt_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_not_have_a_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_a_account"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintBottom_toBottomOf="@id/tv_register"
            app:layout_constraintEnd_toStartOf="@id/tv_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_bottom_margin_top"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="?colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_not_have_a_account"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>