<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.story.CameraxFragment">

        <androidx.camera.view.PreviewView
            android:id="@+id/camera_viewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackAlpha42"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:titleTextColor="@color/textColorPrimaryInverse" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/frame_btn_capture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        android:background="@color/blackAlpha42"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_capture"
        tools:ignore="NegativeMargin" />


    <ImageButton
        android:id="@+id/btn_open_folder_image"
        android:layout_width="@dimen/button_image_size_medium"
        android:layout_height="@dimen/button_image_size_medium"
        android:background="@android:color/transparent"
        android:contentDescription="@string/open_image"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image"
        app:layout_constraintBottom_toBottomOf="@id/btn_capture"
        app:layout_constraintEnd_toStartOf="@id/btn_capture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_capture"
        app:tint="?colorAccent" />


    <ImageButton
        android:id="@+id/btn_capture"
        android:layout_width="@dimen/button_image_size_large"
        android:layout_height="@dimen/button_image_size_large"
        android:layout_marginBottom="@dimen/root_padding"
        android:background="@drawable/shape_bg_btn_capture"
        android:contentDescription="@string/capture_camera"
        android:padding="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_flip_camera"
        app:layout_constraintStart_toEndOf="@id/btn_open_folder_image"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/btn_flip_camera"
        android:layout_width="@dimen/button_image_size_medium"
        android:layout_height="@dimen/button_image_size_medium"
        android:background="@android:color/transparent"
        android:contentDescription="@string/flip_camera"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_flip_camera"
        app:layout_constraintBottom_toBottomOf="@id/btn_capture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_capture"
        app:layout_constraintTop_toTopOf="@id/btn_capture"
        app:tint="?colorAccent" />


</androidx.constraintlayout.widget.ConstraintLayout>