<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.story.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/layout_main_toolbar"
            layout="@layout/layout_main_toolbar" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="216dp"
            android:layout_margin="@dimen/root_padding"
            android:padding="1dp"
            app:layout_constraintTop_toBottomOf="@id/layout_main_toolbar"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Prosa.ImageView.Rounded"
            app:strokeColor="@android:color/darker_gray"
            app:strokeWidth="1dp"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_location"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/root_padding"
            android:layout_marginTop="@dimen/root_padding"
            android:focusable="false"
            android:hint="@string/add_location"
            app:endIconMode="clear_text"
            app:endIconTint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:hintTextColor="?colorAccent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo"
            app:startIconDrawable="@drawable/ic_map"
            app:startIconTint="?colorAccent">

            <com.rchyn.prosa.components.EditText
                android:id="@+id/edt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="top|start"
                android:imeOptions="actionNext"
                android:inputType="none"
                android:nestedScrollingEnabled="true"
                android:paddingVertical="@dimen/edit_text_padding_vertical_description" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/root_padding"
            android:layout_marginTop="@dimen/edit_text_padding_vertical_description"
            android:gravity="top|start"
            android:hint="@string/description"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            app:endIconMode="clear_text"
            app:endIconTint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/layout_edt_location">

            <com.rchyn.prosa.components.EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                android:maxHeight="@dimen/description_maximum_height"
                android:maxLength="200"
                android:minHeight="@dimen/description_minimum_height"
                android:nestedScrollingEnabled="true"
                android:paddingVertical="@dimen/edit_text_padding_vertical_description"
                android:requiresFadingEdge="vertical" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload_story"
            style="@style/Widget.Prosa.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/root_padding"
            android:layout_marginTop="@dimen/layout_edt_distance_margin"
            android:text="@string/upload_story"
            app:layout_constraintTop_toBottomOf="@id/layout_edt_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>